Fix UI: Don't collapse title when empty during editing

--- a/css/bookmarks.css
+++ b/css/bookmarks.css
@@ -362,6 +362,7 @@ button span,
 }
 
 .bookmark-detail h1 {
+	min-height: 28px;
 	font-size: 28px;
 	line-height: 1.3;
 	cursor: text;
